--- a/front_end/index.html
+++ b/front_end/index.html
@@ -4,31 +4,81 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Chat</title>
-  <script src="https://cdn.tailwindcss.com"></script>
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="../css/auctionRoom.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 </head>
 <body>
-<div class="flex justify-center">
-  <h1 class="text-8xl font-bold">Socket Demo</h1>
-</div>
-<div class="w-[50svw] mx-auto p-4 bg-gray-100 rounded-lg shadow-lg mt-12 text-4xl">
-  <div id="chat-messages" class="border-b-2 pb-4 mb-4"></div>
 
-  <div id="chat-box" class="flex items-center">
-    <input
-            type="text"
-            id="message"
-            placeholder="Type a message"
-            class="flex-grow px-3 py-2 mr-2 bg-white border border-gray-300 rounded-lg focus:outline-none focus:border-blue-500"
-    />
-    <button
-            onclick="sendMessage()"
-            class="px-4 py-2 text-white bg-green-500 rounded-lg hover:bg-green-700 focus:outline-none"
-    >
-      Send
-    </button>
+<div class="back-btn"><a href="../../index.php">Back</a></div>
+<div id="auction-room">
+  <div class="heading"><h1 id="auctionName">Auction Name</h1></div>
+  <div class="heading"><h2 id="bidAmount">Current Bid: R300 000</h2></div>
+  <div class="auction-container" id="auction-container">
+
+    <div class="auction-image" id="image"></div>
+    <div class="property-container">
+      <div class="property-card">
+        <div class="property-title" id="property-title">3 Bedroom Apartment London</div>
+        <div class="property-location" id="property-location">London, England</div>
+        <div class="property-details">
+          <div id="bed"><div class="bed"></div>5</div>
+          <div id="bath"><div class="bath"></div>2</div>
+          <div id="parking"><div class="parking"></div>0</div>
+        </div>
+
+        <div class="property-description" id="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut fringilla odio.
+          Nullam ut tortor vel justo scelerisque fermentum. Integer euismod justo vel metus condimentum feugiat.
+          Nunc tristique mi eu eros efficitur, nec ultricies nulla tristique. Maecenas vitae metus sed turpis mollis commodo.
+          Nulla facilisi. Vivamus dictum, ipsum ac feugiat posuere, sem velit tristique sem, nec placerat quam erat nec nulla.
+          Sed vel mi nec nisl feugiat tincidunt sit amet ut justo. Vivamus lobortis nisl vitae sapien suscipit convallis.
+          Ut ultricies quam vel quam congue, ac lacinia sapien venenatis. Sed tincidunt mi id massa fringilla, sit amet elementum
+          nisi condimentum. Sed pretium est non ligula laoreet, eu congue ligula vestibulum. Suspendisse potenti. Sed dictum mi vitae
+          risus elementum, eu pellentesque leo posuere. Vivamus at gravida libero. Sed in odio odio.
+        </div>
+
+        <div class="property-amenities" id="amenities">
+          <div><div class="pin"></div><p>Balcony</p></div>
+          <div><div class="pin"></div><p>Modern</p></div>
+          <div><div class="pin"></div><p>London central</p></div>
+          <div><div class="pin"></div><p>Great Views</p></div>
+        </div>
+      </div>
+
+    </div>
+
+  </div>
+
+  <div class="bid-container">
+
+    <form id="bid-form">
+      <h2>Place a Bid</h2>
+      <div>
+        <label for="bid">Your Bid</label>
+        <input type="number" name="bid" id="bid" min="300000" placeholder="300000">
+      </div>
+      <div><button class="submit-btn">Place Bid</button></div>
+    </form>
   </div>
 </div>
+
+
+<div id="auction-code-container">
+  <div id="auction-code-form">
+    <h2>Auction Code</h2>
+    <input type="text" name="auctionCode" id="auctionCode" placeholder="Auction Room Code">
+    <button class="submit-btn" onclick="sendCode()">Join Auction</button>
+  </div>
+</div>
+</div>
 <script src="https://cdn.socket.io/4.7.5/socket.io.min.js"></script>
-<script src="index.js"></script>
+<script src="index.js">
+  $(document).ready(function(){
+    $('#auction-room').hide();
+  })
+</script>
 </body>
 </html>
