--- a/front_end/index.html
+++ b/front_end/index.html
@@ -83,6 +83,7 @@
       width: 30px;
       height: 30px;
     }
+
   </style>
 </head>
 <body>
@@ -133,12 +134,16 @@
       <h2>Place a Bid</h2>
       <div>
         <label for="bid">Your Bid</label>
-        <input type="number" name="bid" id="bid" min="300000" placeholder="300000">
+        <input type="number" name="bid" id="bid" min="0" placeholder="Your bid">
       </div>
-      <div><button class="submit-btn">Place Bid</button></div>
+      <div><button class="submit-btn"  id="bidButton">Place Bid</button></div>
     </form>
   </div>
+
+
 </div>
+
+
 
 
 <div id="auction-code-container">
