Implemented Bid update

--- a/front_end/index.html
+++ b/front_end/index.html
@@ -92,6 +92,7 @@
 <div id="auction-room">
   <div class="heading"><h1 id="auctionName">Auction Name</h1></div>
   <div class="heading"><h2 id="bidAmount">Current Bid: R300 000</h2></div>
+  <div class="heading"><h2 id="bidUser"></h2></div>
   <div class="auction-container" id="auction-container">
 
     <div class="auction-image" id="image"></div>
